--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@types/express": "^4.17.6",
     "tslint": "^6.1.2",
     "typescript": "^3.8.3",
-    "puppeteer": "^3.0.4"
+    "puppeteer": "^3.0.4",
+    "archiver": "^4.0.1",
+    "fs": "",
+    "tmp": ""
   },
   "dependencies": {
     "express": "^4.17.1"
