--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
+    "start": "tsc && npx nodemon dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,15 +12,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.6",
-    "tslint": "^6.1.2",
-    "typescript": "^3.8.3",
-    "puppeteer": "^3.0.4",
     "archiver": "^4.0.1",
-    "fs": "",
-    "tmp": "",
+    "body-parser": "",
     "cors": "^2.8.5",
+    "fs": "",
+    "image-size": "^0.8.3",
     "node-vibrant": "^3.1.5",
-    "body-parser": ""
+    "nodemon": "^2.0.4",
+    "puppeteer": "^3.0.4",
+    "tmp": "",
+    "tslint": "^6.1.2",
+    "typescript": "^3.8.3"
   },
   "dependencies": {
     "express": "^4.17.1"
