--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "archiver": "^4.0.1",
     "body-parser": "",
     "cors": "^2.8.5",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
     "fs": "",
     "image-size": "^0.8.3",
     "node-vibrant": "^3.1.5",
     "nodemon": "^2.0.4",
+    "prettier": "^2.2.1",
     "puppeteer": "^3.0.4",
     "tmp": "",
-    "tslint": "^6.1.2",
     "typescript": "^3.8.3"
   },
   "dependencies": {
