--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,17 @@
     "sourceMap": true,
     "outDir": "dist"
   },
-  "lib": ["es2015"]
+  "lib": ["es2015"],
+  "strict": true,
+  "noUnusedLocals": true,
+  "noUnusedParameters": true,
+  "noImplicitReturns": true,
+  "noFallthroughCasesInSwitch": true,
+  "forceConsistentCasingInFileNames": true,
+  "noImplicitAny": true,
+  "noImplicitThis": true,
+  "skipLibCheck": true,
+  "experimentalDecorators": true,
+  "allowSyntheticDefaultImports": true,
+  "exclude": ["node_modules"]
 }
