--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/app.js",
   "engines": {
-    "node": "^12.20.1"
+    "node": "14.10.1"
   },
   "scripts": {
     "build": "tsc --project tsconfig.json",
