--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/app.js",
   "engines": {
-    "node": "14.10.1"
+    "node": "12.19.0"
   },
   "scripts": {
     "build": "tsc --project tsconfig.json",
@@ -17,23 +17,21 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "archiver": "^4.0.1",
-    "body-parser": "",
     "cors": "^2.8.5",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "fs": "",
     "image-size": "^0.8.3",
     "node-vibrant": "^3.1.5",
     "nodemon": "^2.0.4",
     "prettier": "^2.2.1",
     "puppeteer": "^3.0.4",
-    "tmp": "",
     "typescript": "^3.8.3"
   },
   "dependencies": {
     "@types/puppeteer": "^5.4.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "tmp": "^0.2.1"
   }
 }
