--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "@types/puppeteer": "^5.4.3",
+    "@types/tmp": "^0.2.0",
+    "del": "^6.0.0",
     "express": "^4.17.1",
     "tmp": "^0.2.1"
   }
