--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,7 +12,7 @@ jobs:
     build:
     
         runs-on: ubuntu-latest
-        if: github.ref == 'refs/heads/master' && github.event.name == 'push'
+        if: github.ref == 'refs/heads/master'
     
         steps:
         - uses: actions/checkout@v2
@@ -38,7 +38,7 @@ jobs:
     build-dev:
     
         runs-on: ubuntu-latest
-        if: github.ref == 'refs/heads/dev' && github.event.name == 'push'
+        if: github.ref == 'refs/heads/dev'
     
         steps:
         - uses: actions/checkout@v2
