--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
   "skipLibCheck": true,
   "experimentalDecorators": true,
   "allowSyntheticDefaultImports": true,
-  "exclude": ["node_modules"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules/**/*"]
 }
